--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -358,7 +358,7 @@ img {
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 0.8em;
   @include breakpoint(large) {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
     grid-gap: 1em;
     width: 70%;
   }
