--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -181,54 +181,40 @@
   }
 }
 
+.side-projects-wrapper {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 1rem;
+  @include breakpoint(medium) {
+    grid-template-columns: 1fr 1fr;
+  }
+  @include breakpoint(large) {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 #side-projects {
+  color: var(--alt-black);
   margin: 0;
   @include breakpoint(large) {
     margin-top: 6rem;
     margin-bottom: 3rem;
   }
   .item {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 1rem;
-    border-bottom: 1px solid var(--border-color);
-    padding: 2rem 0;
-    @include breakpoint(large) {
-      grid-auto-rows: 1fr;
-      padding: 4rem 0;
-      align-items: center;
-    }
-
-    &:first-of-type {
-      border-top: 1px solid var(--border-color);
-      margin-top: 2rem;
-      @include breakpoint(large) {
-        margin-top: 3rem;
-      }
-    }
+    padding: 1.5rem 0;
 
     &__title {
-      margin-bottom: 0;
+      margin-bottom: .5rem !important;
+    }
+
+    p {
+      margin-bottom: .25rem !important;
     }
 
     &__content {
       @include breakpoint(medium) {
         margin-right: 4rem;
       }
-    }
-
-    p {
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-
-    @include breakpoint(medium) {
-      grid-template-columns: 1fr;
-    }
-
-    @include breakpoint(large) {
-      grid-template-columns: repeat(2, 1fr);
     }
   }
 }
