--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -155,6 +155,12 @@
       @include breakpoint(large) {
         font-size: 1.8rem;
       }
+
+      span {
+        font-size: 0.6rem;
+        display: inline;
+        margin-bottom: 0;
+      }
     }
 
     div {
@@ -204,11 +210,11 @@
     padding: 1.5rem 0;
 
     &__title {
-      margin-bottom: .5rem !important;
+      margin-bottom: 0.5rem !important;
     }
 
     p {
-      margin-bottom: .25rem !important;
+      margin-bottom: 0.25rem !important;
     }
 
     &__content {
@@ -232,6 +238,14 @@
       max-width: 100%;
       @include breakpoint(large) {
         max-width: 70%;
+      }
+    }
+
+    h1 {
+      span {
+        font-size: 1rem;
+        display: inline;
+        margin-bottom: 0;
       }
     }
   }
