--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -104,6 +104,11 @@
       width: 100%;
       top: 0;
       height: 100%;
+      pointer-events: none;
+
+      &::-webkit-media-controls {
+        display: none;
+      }
     }
   }
 
