--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -133,20 +133,20 @@ input[type="email"] {
   }
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
+// @keyframes fadeIn {
+//   from {
+//     opacity: 0;
+//   }
 
-  to {
-    opacity: 1;
-  }
-}
+//   to {
+//     opacity: 1;
+//   }
+// }
 
-.fadeIn {
-  -webkit-animation-name: fadeIn;
-  animation-name: fadeIn;
-}
+// .fadeIn {
+//   -webkit-animation-name: fadeIn;
+//   animation-name: fadeIn;
+// }
 
 h2 {
   .intro {
