--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -218,9 +218,13 @@ h2 {
 }
 
 .company {
-  margin: 125px 0;
+  margin: 30px 0;
   // background: var(--companies-bg);
-  padding: 25px 0;
+  padding: 0;
+  @include breakpoint(medium) {
+    margin: 125px 0;
+    padding: 25px 0;
+  }
   h3 {
     margin-bottom: 20px;
     text-align: center;
