lighthouse no https???

--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -109,7 +109,7 @@
     --green: #9cffdb;
     --blue: rgba(137, 212, 255, 0.5);
     --black: rgb(57, 53, 49);
-    --alt-black: #9c9c9c;
+    --alt-black: #595959;
     --filter-colour: grayscale(1);
     --companies-bg: #fff;
     --x: 50%;
