--- a/styles/variables/_typography.scss
+++ b/styles/variables/_typography.scss
@@ -11,6 +11,8 @@
   --blue: rgba(137, 212, 255, 0.5);
   --black: rgb(57, 53, 49);
   --alt-black: #9c9c9c;
+  --companies-bg: #fff;
+  --filter-colour: grayscale(1);
   --x: 50%;
   --y: 0%;
 
@@ -40,7 +42,7 @@
   --form-text-color: rgb(57, 53, 49);
 }
 
-html[data-theme='dark'] {
+html[data-theme="dark"] {
   --logo-color: linear-gradient(#fff0, #fff0) padding-box,
     radial-gradient(
         farthest-corner at var(--x) var(--y),
@@ -64,6 +66,8 @@ html[data-theme='dark'] {
   --button-text-color: #1e1e1e;
   --form-color: #000;
   --form-text-color: #fff;
+  --companies-bg: #9c9c9c;
+  --filter-colour: grayscale(1);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -84,22 +88,30 @@ html[data-theme='dark'] {
     --nav-border-color: hsla(0, 0%, 100%, 0.6);
     --nav-button: #fff;
     --nav-bg: #545454;
-    --image-gradient: linear-gradient(30deg, hsla(0, 0%, 24%, 0.6), rgb(0, 0, 0));
+    --image-gradient: linear-gradient(
+      30deg,
+      hsla(0, 0%, 24%, 0.6),
+      rgb(0, 0, 0)
+    );
     --svg-fill-color: hsla(0, 0%, 100%, 0.6);
     --button-bg: hsl(140, 100%, 76%);
     --button-text-color: #1e1e1e;
     --form-color: #000;
     --form-text-color: #fff;
+    --companies-bg: #9c9c9c;
+    --filter-colour: grayscale(1);
   }
 
-  html[data-theme='light'] {
+  html[data-theme="light"] {
     --primary-colour: rgb(244, 0, 136);
     --primary-colour-dark: rgb(187, 0, 103);
     --pink: #ffd6ed;
     --green: #9cffdb;
     --blue: rgba(137, 212, 255, 0.5);
     --black: rgb(57, 53, 49);
-    --alt-black: #9c9c9c;
+    --alt-black: #595959;
+    --filter-colour: grayscale(1);
+    --companies-bg: #fff;
     --x: 50%;
     --y: 0%;
 
