--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -1,5 +1,5 @@
-@import "navigation";
-@import "case-studies";
-@import "what-ive-been-upto";
-@import "footer";
-@import "services";
+@use "navigation";
+@use "case-studies";
+@use "what-ive-been-upto";
+@use "footer";
+@use "services";
