--- a/styles/global.scss
+++ b/styles/global.scss
@@ -2,7 +2,7 @@
 @use "grid-settings.scss";
 @use "components/components";
 @use "variables/variables";
-@import url('https://fonts.googleapis.com/css2?family=Karla&family=Oswald&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Karla&family=Oswald&display=swap");
 
 html {
   margin: 0px auto;
@@ -181,4 +181,39 @@ h2 {
 .gatsby-image-wrapper img[src*="base64\\,"] {
   image-rendering: -moz-crisp-edges;
   image-rendering: pixelated;
+}
+
+.wave {
+  animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
+  animation-duration: 2.5s; /* Change to speed up or slow down */
+  animation-iteration-count: infinite; /* Never stop waving :) */
+  transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
+  display: inline-block;
+}
+
+@keyframes wave-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(14deg);
+  } /* The following five values can be played with to make the waving more or less extreme */
+  20% {
+    transform: rotate(-8deg);
+  }
+  30% {
+    transform: rotate(14deg);
+  }
+  40% {
+    transform: rotate(-4deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  } /* Reset for the last half to pause */
+  100% {
+    transform: rotate(0deg);
+  }
 }
