--- a/styles/components/_case-studies.scss
+++ b/styles/components/_case-studies.scss
@@ -2,12 +2,12 @@
 
 #cards {
   margin-top: 2rem;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
   -webkit-overflow-scrolling: touch;
   display: grid;
   grid-gap: 15px;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-rows: 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  // grid-auto-rows: 1fr;
 
   @include grid-settings.breakpoint(medium) {
     grid-gap: 15px;
@@ -23,18 +23,18 @@
     grid-template-columns: repeat(2, 1fr);
   }
 
-  &:before {
-    content: "";
-    width: 0;
-    padding-bottom: 100%;
-    grid-row: 1 / 1;
-    grid-column: 1 / 1;
-  }
+  // &:before {
+  //   content: "";
+  //   width: 0;
+  //   padding-bottom: 100%;
+  //   grid-row: 1 / 1;
+  //   grid-column: 1 / 1;
+  // }
 
-  > *:first-child {
-    grid-row: 1 / 1;
-    grid-column: 1 / 1;
-  }
+  // > *:first-child {
+  //   grid-row: 1 / 1;
+  //   grid-column: 1 / 1;
+  // }
 }
 
 .card {
@@ -50,14 +50,7 @@
   overflow: hidden;
   transition-property: color;
   transition-delay: $delay;
-
-  &:before,
-  &:after {
-    content: "";
-    width: 10px;
-    height: 0;
-    border: 0 none;
-  }
+  aspect-ratio: 16/9;
 
   &.hover {
     transition-delay: $delay;
