--- a/styles/components/_case-studies.scss
+++ b/styles/components/_case-studies.scss
@@ -128,6 +128,12 @@
     }
   }
 
+  &.has-video &__image {
+    img {
+      transition: opacity 0.3s ease-in-out, transform 0.6s ease-out;
+    }
+  }
+
   &.has-video:hover &__image {
     img {
       opacity: 0;
