--- a/app/globals.scss
+++ b/app/globals.scss
@@ -2,6 +2,7 @@
 @use "../styles/grid-settings.scss";
 @use "../styles/components/components";
 @use "../styles/variables/variables";
+@use "../styles/animations.scss";
 
 html {
   margin: 0px auto;
@@ -43,6 +44,39 @@ footer,
   padding-right: 7%;
   margin: 0px auto;
   width: calc(100% - 14%);
+}
+
+// Screen reader only class for accessibility
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
+// Skip navigation link for accessibility
+.skip-link {
+  position: absolute;
+  top: -100px;
+  left: 10px;
+  background: var(--bg);
+  color: var(--text-color);
+  padding: 12px 16px;
+  text-decoration: none;
+  z-index: 100;
+  border: 2px solid var(--text-color);
+  border-radius: 4px;
+  font-weight: 600;
+  transition: top 0.2s ease;
+
+  &:focus {
+    top: 10px;
+  }
 }
 
 form {
