--- a/styles/components/_case-studies.scss
+++ b/styles/components/_case-studies.scss
@@ -3,6 +3,7 @@
 #cards {
   margin-top: 2rem;
   margin-bottom: 2rem;
+  scroll-margin-top: 2rem;
   -webkit-overflow-scrolling: touch;
   display: grid;
   grid-gap: 15px;
