--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -2,8 +2,6 @@
 
 footer {
   > div {
-    margin-top: 30px;
-    padding-top: 35px;
     padding-bottom: 35px;
     display: flex;
     align-items: center;
@@ -37,7 +35,7 @@ footer {
 
     p {
       margin-bottom: 0;
-      font-size: .8rem;
+      font-size: 0.8rem;
     }
   }
 }
